# digipi

./: .Xauthority  .asoundrc  .fehbg  .fldigi  .flrig  .gitconfig  .lesshst  .selected_editor  .vnc  .wget-hsts  README.md
.cache/: .bluetoothctl_history  qt_compose_cache_little_endian_d2471fdb5d7b40cab24ab52c5c1e4fed
.cache/fontconfig/: 07af4550-fa96-419a-9020-6a49ac236139-le32d8.cache-7  72ef9697cf18b302e73330882665f3de-le32d8.cache-7
.cache/go-build/: trim.txt
.cache/go-build/04/: 04ccc52099db29d42c503d593ce426703ae04784b0ebe4ed9d05ee3407d2b92c-a
.cache/go-build/07/: 0732d42e3cfbe0fa79e7abf0f318b233358e3e2e8deffd4e0840e6879be3341b-a
.cache/go-build/0a/: 0a15a4d7d47f264ec8037b7645595f23a732548f5ba2b08d561958a836e067b6-a
.cache/go-build/10/: 100a8d751042ae23cfc2696b9fa7b85106f9599268778020367884237297b217-d  10c0efd6ee09eed70aca65c3dda4e7875e017d7c1f45bf77f4f71ae21e5ae2ca-d
.cache/go-build/14/: 144687ef88622d1d05b5864bee07680de5aad479c1debd4ee7fb6944faba0d2d-a
.cache/go-build/16/: 16127698575b1f6bf0b92d1b54ed6f585410b495e4ada1f6ce3d5370556f7c02-d
.cache/go-build/21/: 210c3d0cffc5376a2edc968059c404711765866115136ca7a370b63f61ebd7a4-a
.cache/go-build/22/: 228b3275ff577e76c2d32b7aec3a4dea77deb53700db0d843e5b77347ec6a686-a
.cache/go-build/23/: 2356bf8cc5f2f65d68a1551bcd30479badc0c5550a0fc821142a6c85231df3f7-a
.cache/go-build/25/: 25888dddc1b72f60b69be8deb709f967df73fec16932bae150e47f50ce2e00ca-d
.cache/go-build/27/: 27628ed610fd0d2f6e0a87f9928a768c583b7c5ca73a0e590ef563928bf3c908-a
.cache/go-build/2d/: 2d83dffed1303245c97a0f01bd87df646e97ebe0e8d754ef65b98f098a7f53c0-d
.cache/go-build/2e/: 2edb02b02a7c5f4439601e129c288d6bd4c130d763da75a2afb33b610a3e5ed5-d
.cache/go-build/2f/: 2f3b8086c49724f35a60d31f6150e962557368a062d6a2f75da97d9cf9dba12f-a  2fcadadb0dc603c201d5874dc33df1df46f57bf9a0877e2764b2559ae75da6e3-d
.cache/go-build/31/: 3157e26a05f82898373aa776a30469122d203ae1f9619b42a6b9894ab47bd6a5-a  31ffdb838316c4ad2e2fbb7df798efc6095903926653cbcc0062b2302610a96b-a
.fldigi.ok/macros/: macros.mdf
.fldigi.slow.bpsk31/: fldigi_def.xml
.fldigi.slow.bpsk31/debug/: n3fjp_data_stream.txt.1  stacktrace.txt
.fldigi.slow.cw/: fldigi.prefs
.fldigi.slow.cw/debug/: status_log.txt  status_log.txt.4
.fltk/fltk.org/: fltk.prefs
etc/ax25/: ax25.profile  ax25d.conf  axports  axspawn.conf  flexd.conf  node.conf  node.info  node.motd  node.perms  nodebackup.sh  nrbroadcast  nrports  rip98d.conf  rsports  rxecho.conf  ttylinkd.conf  uronode.announce  uronode.conf  uronode.info  uronode.motd  uronode.perms  uronode.routes  uronode.users
etc/systemd/: digipi-boot.service  fldigi.service  gpio_redled.service  node.service  pat.service  tnc300b.service  winlinkrms.service  wsjtx.service
home/pi/: .Xauthority  .Xdefaults  .asoundrc  .bashrc  .config  .emwmrc  .lesshst  .local  .mwmrc  .vnc  .wget-hsts  .xsession-errors  ILI9486.py  LinPac  a.sh  ardop.sh  axcall.sh  digibanner.py  digibanner.py.orig  digibuttons.gpiod.py  digibuttons.gpiozero.py  digibuttons.py  digibuttons.rpigpio.py  direwatch.py  direwolf.digipeater.conf  direwolf.digipeater.sh  direwolf.node.conf  direwolf.node.sh  direwolf.tnc.conf  direwolf.tnc.sh  direwolf.tnc300b.conf  direwolf.tnc300b.sh  direwolf.tracker.conf  direwolf.tracker.sh  direwolf.winlink.conf  direwolf.winlink.sh  fldigi.sh  gpio_redled.py  js8call.sh  linpac.sh  (+11 more)
home/pi/git/fim-0.7.1/distros/: Makefile  Makefile.am  Makefile.in
home/pi/git/fim-0.7.1/doc/: FIM.TXT  Makefile  Makefile.am  Makefile.in  fim.man  fim.man.in  fim.man.txt  fimgs.man  fimgs.man.in  fimgs.man.txt  fimrc.man  fimrc.man.in  fimrc.man.txt  vim2html.pl
home/pi/git/fim-0.7.1/media/multipage/: Makefile  Makefile.am  Makefile.in  numbers_one_to_ten.tiff  sample.tex
home/pi/git/fim-0.7.1/scripts/: Makefile  Makefile.am  Makefile.in
home/pi/git/fim-0.7.1/scripts/example/: oneline.fim  quit_23.fim  set_var.fim
home/pi/git/fim-0.7.1/scripts/maintenance/: configure-brute-check.sh  configure-live.sh  configure-minimal.sh  configure-noscripting.sh  configure-only-fb-mini.sh  cron-build.sh  cron-build.sh.in  cron-rsync.sh  cron-rsync.sh.in  cron-svndump.pl  cron-svndump.pl.in  htmlbody.awk  remote-build.sh  remote-build.sh.in  yacc2grammar.awk  yacc2grammar.h
home/pi/git/fim-0.7.1/scripts/rc/: fimrc.eog  fimrc.gqview  fimrc.kuickshow  fimrc.lazy
home/pi/git/fim-0.7.1/scripts/tests/: font.sh  maxlenscript.fim  sanity.fim  spawn_and_quit.exp  version.sh
home/pi/git/fim-0.7.1/scripts/utilities/: fimscan.sh  screenshot.sh
home/pi/git/fim-0.7.1/src/: AADevice.cpp  AADevice.h  Arg.cpp  Arg.h  Benchmarkable.h  Browser.cpp  Browser.h  CACADevice.cpp  CACADevice.h  Cache.cpp  Cache.h  Command.cpp  Command.h  CommandConsole-cmd.cpp  CommandConsole-help.cpp  CommandConsole-init.cpp  CommandConsole-var.cpp  CommandConsole.cpp  CommandConsole.h  DebugConsole.cpp  DebugConsole.h  DisplayDevice.cpp  DisplayDevice.h  DummyDisplayDevice.cpp  DummyDisplayDevice.h  FbiStuff.cpp  FbiStuff.h  FbiStuffAVIF.cpp  FbiStuffBit1.cpp  FbiStuffBit24.cpp  FbiStuffBmp.cpp  FbiStuffDjvu.cpp  FbiStuffFbtools.cpp  FbiStuffFbtools.h  FbiStuffGif.cpp  FbiStuffJasPer.cpp  FbiStuffJpeg.cpp  FbiStuffList.h  FbiStuffLoader.cpp  FbiStuffLoader.h  (+66 more)
home/pi/git/fim-0.7.1/src/testdir/: Makefile  test1.in  test1.ok  test10.in  test10.ok  test11.in  test11.ok  test12.in  test12.ok  test13.in  test13.ok  test14.in  test14.ok  test15.in  test15.ok  test16.in  test16.ok  test17.in  test17.ok  test18.in  test18.ok  test19.in  test19.ok  test2.in  test2.ok  test20.in  test20.ok  test21.in  test21.ok  test22.in  test22.ok  test3.in  test3.ok  test4.in  test4.ok  test5.in  test5.ok  test6.in  test6.ok  test7.in  (+5 more)
home/pi/git/fim-0.7.1/src/testsuite/config/: unix.exp
home/pi/git/fim-0.7.1/src/testsuite/fim.test/: fim.exp
systemd/system/: ardop.service  digipeater.service  digipi-boot.service  digipi-resolv.service  fldigi.service  js8call.service  node.service  pat.service  rigctld.service  sstv.service  tnc.service  tnc300b.service  webchat.service  winlinkrms.service  wsjtx.service
(+880 files in other folders)
