subdir = scripts

AUTOMAKE_OPTIONS = nostdinc no-dependencies

SUBDIRS = 

EXTRA_DIST= \
	$(srcdir)/tests/sanity.fim  \
	$(srcdir)/tests/maxlenscript.fim \
	$(srcdir)/tests/version.sh \
	$(srcdir)/tests/font.sh \
	$(srcdir)/tests/spawn_and_quit.exp \
	$(srcdir)/example/oneline.fim		\
	$(srcdir)/example/quit_23.fim		\
	$(srcdir)/example/set_var.fim		\
	$(srcdir)/rc/fimrc.eog		\
	$(srcdir)/rc/fimrc.gqview		\
	$(srcdir)/rc/fimrc.kuickshow	\
	$(srcdir)/rc/fimrc.lazy		\
	$(srcdir)/utilities/screenshot.sh	\
	$(srcdir)/maintenance/configure-*.sh \
	$(srcdir)/maintenance/yacc2grammar.h \
	$(srcdir)/maintenance/yacc2grammar.awk \
	$(srcdir)/maintenance/htmlbody.awk \
	$(srcdir)/utilities/fimscan.sh

